hello-world/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    field.cattle.io/creatorId: user-xv4tn
    field.cattle.io/publicEndpoints: '[{"addresses":["172.22.101.111"],"port":32076,"protocol":"TCP","serviceName":"default:hello-nodeport","allNodes":true}]'
  creationTimestamp: "2020-03-31T20:38:58Z"
  generation: 2
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-default-hello
  name: hello
  namespace: default
  resourceVersion: "15857"
  selfLink: /apis/apps/v1/namespaces/default/deployments/hello
  uid: fbda7434-cb45-43a0-9546-e55553548ff5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-default-hello
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2020-03-31T20:38:58Z"
        field.cattle.io/ports: '[[{"containerPort":80,"dnsName":"hello-nodeport","hostPort":0,"kind":"NodePort","name":"hello","protocol":"TCP","sourcePort":0}]]'
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-default-hello
    spec:
      containers:
      - image: rancher/hello-world
        imagePullPolicy: Always
        name: hello
        ports:
        - containerPort: 80
          name: hello
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-03-31T20:39:08Z"
    lastUpdateTime: "2020-03-31T20:39:08Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-03-31T20:38:59Z"
    lastUpdateTime: "2020-03-31T20:39:08Z"
    message: ReplicaSet "hello-cf7479564" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
